--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <title>ATCFUND.ORG</title>
     <link rel="shortcut icon" href="https://levon-avetisyan.github.io/atc/favicon.png" type="image/x-icon">
     <link rel="icon" href="https://levon-avetisyan.github.io/atc/favicon.png" type="image/x-icon">
-    <script src="/js/vendor/jquery.min.js"></script>
-    <script src="/js/vendor/bootstrap.min.js"></script>
-    <script src="/js/scripts.js"></script>
+    <script src="./js/vendor/jquery.min.js"></script>
+    <script src="./js/vendor/bootstrap.min.js"></script>
+    <script src="./js/scripts.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,800,700,600,400italic,800italic,700italic,300italic,300'
           rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Raleway:400,700,300,200,900,800,600,500' rel='stylesheet'
           type='text/css'>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
           integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/vendor/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="./css/vendor/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body data-spy="scroll">
 <div class="page-header">
