--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 <div class="page-header">
     <div class="container h-100">
         <div class="h-100 d-flex flex-row align-items-center justify-content-between">
-            <a class="header-logo" href="https://levon-avetisyan.github.io/atc"><img src="./img/logo.png" alt="ACT FUND LOGO"></a>
+            <a class="header-logo"
+               href="https://levon-avetisyan.github.io/atc">
+                <img src="https://levon-avetisyan.github.io/atc/img/logo.png" alt="ACT FUND LOGO"></a>
             <div class="header-call-us">
                 <a href="tel:732-616-8499">
                     <i class="fas fa-phone"></i>
@@ -70,21 +72,21 @@
             <div class="row no-gutters donate-types-row">
                 <div class="col-4">
                     <div class="donate-types-hero">
-                        <img src="../img/mitzvah.png" alt="">
+                        <img src="https://levon-avetisyan.github.io/atc/img/mitzvah.png" alt="">
                         <h4>Wedding Support</h4>
                         <p>Help them walk down the aisle with dignity and joy, instead of fear of debt.</p>
                     </div>
                 </div>
                 <div class="col-4">
                     <div class="donate-types-hero">
-                        <img src="../img/wedding.png" alt="">
+                        <img src="https://levon-avetisyan.github.io/atc/img/wedding.png" alt="">
                         <h4>Wedding Support</h4>
                         <p>Help them walk down the aisle with dignity and joy, instead of fear of debt.</p>
                     </div>
                 </div>
                 <div class="col-4">
                     <div class="donate-types-hero">
-                        <img src="../img/Charity-type_08.png" alt="">
+                        <img src="https://levon-avetisyan.github.io/atc/img/Charity-type_08.png" alt="">
                         <h4>Wedding Support</h4>
                         <p>Help them walk down the aisle with dignity and joy, instead of fear of debt.</p>
                     </div>
@@ -104,7 +106,7 @@
                             cannot take care of themselves. Our orphans in our community are our responsibility.</p>
                     </div>
                     <div class="col-6">
-                        <img class="img-fluid" src="../img/donate.png" alt="Donate ATC">
+                        <img class="img-fluid" src="https://levon-avetisyan.github.io/atc/img/donate.png" alt="Donate ATC">
                     </div>
                 </div>
             </div>
@@ -150,7 +152,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-6">
-                    <a class="footer-donate-action" href=""><img class="footer-logo" src="../img/footer_logo.png"
+                    <a class="footer-donate-action" href=""><img class="footer-logo" src="https://levon-avetisyan.github.io/atc/img/footer_logo.png"
                                                                  alt=""></a>
                     <p class="footer-desc">Keren Achiezer urges you to partake in saving families from sinking. Show
                         compassion for
