--- a/rabbinic-endorsement.html
+++ b/rabbinic-endorsement.html
@@ -56,7 +56,7 @@
 <section class="main rabbinic-endorsement-container">
     <div class="container">
         <h1 class="text-center">Rabbinic Endorsement</h1>
-        <img class="img-fluid" width="100%" src="./img/Letter.png" alt="">
+        <img class="img-fluid" width="100%" src="https://levon-avetisyan.github.io/atc/img/Letter.png" alt="">
     </div>
 </section>
 </body>
