--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <title>ATCFUND.ORG</title>
-    <link rel="shortcut icon" href="https://levon-avetisyan.github.io/atc/favicon.png" type="image/x-icon">
-    <link rel="icon" href="https://levon-avetisyan.github.io/atc/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./favicon.png" type="image/x-icon">
+    <link rel="icon" href="./favicon.png" type="image/x-icon">
     <script src="./js/vendor/jquery.min.js"></script>
     <script src="./js/vendor/bootstrap.min.js"></script>
     <script src="./js/scripts.js"></script>
@@ -19,23 +19,13 @@
     <link rel="stylesheet" href="./css/vendor/bootstrap.min.css">
     <link rel="stylesheet" href="./css/main.css">
 </head>
-<body data-spy="scroll">
-<div class="page-header">
-    <div class="container h-100">
-        <div class="h-100 d-flex flex-row align-items-center justify-content-between">
-            <a class="header-logo"
-               href="https://levon-avetisyan.github.io/atc">
-                <img src="https://levon-avetisyan.github.io/atc/img/logo.png" alt="ACT FUND LOGO"></a>
-            <div class="header-call-us">
-                <a href="tel:732-616-8499">
-                    <i class="fas fa-phone"></i>
-                    <span>Call us: 732-616-8499</span>
-                </a>
-            </div>
-        </div>
+<body>
+<div class="page-header pl-3">
+    <div class="h-100 d-flex flex-row align-items-center justify-content-between">
+        <a class="header-logo" href="https://levon-avetisyan.github.io/atc"><img src="./img/logo-karen.png" alt="ACT FUND LOGO"></a>
     </div>
 </div>
-<nav class="navbar navbar-expand-lg">
+<nav class="navbar navbar-expand-lg justify-content-end">
     <div class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav"
          aria-controls="navbarNav"
          aria-expanded="false"
@@ -45,19 +35,23 @@
         </div>
     </div>
     <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav w-100 d-flex flex-row align-items-center justify-content-center">
-            <li class="nav-item"><a class="nav-link" href="https://levon-avetisyan.github.io/atc/#hero">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="https://levon-avetisyan.github.io/atc/#aboutUs">About Us</a></li>
-            <li class="nav-item"><a class="nav-link" href="https://levon-avetisyan.github.io/atc/#help">Help</a></li>
-            <li class="nav-item"><a class="nav-link" href="https://levon-avetisyan.github.io/atc/#contactUs">Contact us</a></li>
-            <li class="nav-item"><a class="nav-link nav-link-separate" href="https://levon-avetisyan.github.io/atc/rabbinic-endorsement">Rabbinic Endorsement</a></li>
-            <li class="nav-item ml-1"><a class="nav-link nav-link-separate" href="/legal-documents">Legal Documents</a></li>
-        </ul>
+        <div class="container">
+            <ul class="pb-4 pb-lg-0 navbar-nav w-100 d-flex flex-column flex-lg-row align-items-center justify-content-around">
+                <li class="nav-item"><a class="nav-link" href="https://levon-avetisyan.github.io/atc/#hero">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://levon-avetisyan.github.io/atc/#aboutUs">About Us</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://levon-avetisyan.github.io/atc/#help">Help</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://levon-avetisyan.github.io/atc/#contactUs">Contact us</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://levon-avetisyan.github.io/atc/rabbinic-endorsement">Rabbinic
+                        Endorsement</a></li>
+                <li class="nav-item ml-1"><a class="nav-link" href="https://levon-avetisyan.github.io/atc/legal-documents">Legal
+                        Documents</a></li>
+            </ul>
+        </div>
     </div>
 </nav>
 <section class="main">
     <section id="hero" class="hero-section">
-        <div class="container">
+        <div class="container h-100">
             <div class="hero-content h-100 d-flex flex-column justify-content-center align-items-end">
                 <h1 class="text-right">WE KEEP FAMILIES AFLOAT.</h1>
                 <h2 class="text-right">Keren Achiezer was founded to support the orphans in our community. Presently we
@@ -69,43 +63,25 @@
                     </a>
                 </div>
             </div>
-            <div class="row no-gutters donate-types-row">
-                <div class="col-4">
-                    <div class="donate-types-hero">
-                        <img src="https://levon-avetisyan.github.io/atc/img/mitzvah.png" alt="">
-                        <h4>Wedding Support</h4>
-                        <p>Help them walk down the aisle with dignity and joy, instead of fear of debt.</p>
-                    </div>
-                </div>
-                <div class="col-4">
-                    <div class="donate-types-hero">
-                        <img src="https://levon-avetisyan.github.io/atc/img/wedding.png" alt="">
-                        <h4>Wedding Support</h4>
-                        <p>Help them walk down the aisle with dignity and joy, instead of fear of debt.</p>
-                    </div>
-                </div>
-                <div class="col-4">
-                    <div class="donate-types-hero">
-                        <img src="https://levon-avetisyan.github.io/atc/img/Charity-type_08.png" alt="">
-                        <h4>Wedding Support</h4>
-                        <p>Help them walk down the aisle with dignity and joy, instead of fear of debt.</p>
-                    </div>
-                </div>
-            </div>
         </div>
     </section>
     <section id="aboutUs" class="about-us-section">
         <div class="container">
             <div class="about-us-content">
                 <div class="row">
-                    <div class="col-6 d-flex flex-column align-items-start justify-content-center">
-                        <h4>ATC: LOVING TORAH AND CHESED</h4>
-                        <p>The Blessings conferred by Hakadosh Boruch Hu to those who rescue Widows and Orphans are
-                            endless. By donating today you are affording yourself the opportunity to unlimited Zechusim
-                            and Merits that Hakadosh Boruch Hu bestows on those who take care of his children when they
-                            cannot take care of themselves. Our orphans in our community are our responsibility.</p>
+                    <div class="col-12 col-md-6 d-flex flex-column align-items-start justify-content-center">
+                        <div class="pb-4 pb-md-0">
+                            <h4 class="text-center text-md-left">KEREN ACHIEZER</h4>
+                            <p class="text-center text-md-left">The Blessings conferred by Hakadosh Boruch Hu to those
+                                who rescue Widows and Orphans are
+                                endless. By donating today you are affording yourself the opportunity to unlimited
+                                Zechusim
+                                and Merits that Hakadosh Boruch Hu bestows on those who take care of his children when
+                                they
+                                cannot take care of themselves. Our orphans in our community are our responsibility.</p>
+                        </div>
                     </div>
-                    <div class="col-6">
+                    <div class="col-12 col-md-6">
                         <img class="img-fluid" src="https://levon-avetisyan.github.io/atc/img/donate.png" alt="Donate ATC">
                     </div>
                 </div>
@@ -119,30 +95,42 @@
                 Your monthly contribution will help:
             </h5>
             <div class="how-it-helps mt-5">
-                <div class="row">
-                    <div class="col-4 help-to">
-                        <i class="fas fa-utensils"></i>
-                        <p>Feed Our children so they don’t feel pangs of hunger.</p>
+                <div class="row justify-content-center">
+                    <div class="col-12 col-md-6 col-lg-5 col-xl-4 help-to">
+                        <div class="help-to-box mt-3 mt-md-0">
+                            <i class="fas fa-utensils"></i>
+                            <p>Feed Our children so they don’t feel pangs of hunger.</p>
+                        </div>
                     </div>
-                    <div class="col-4 help-to">
-                        <i class="fas fa-graduation-cap"></i>
-                        <p>Educate Our Children so they can grow up to be independent, self supporting, and contributing
-                            members of our community.</p>
+                    <div class="col-12 col-md-6 col-lg-5 col-xl-4 help-to">
+                        <div class="help-to-box mt-4 mt-md-0">
+                            <i class="fas fa-graduation-cap"></i>
+                            <p>Educate Our Children so they can grow up to be independent, self supporting, and
+                                contributing
+                                members of our community.</p>
+                        </div>
                     </div>
-                    <div class="col-4 help-to">
-                        <i class="fas fa-tshirt"></i>
-                        <p>Clothe Our Children so they don’t’ feel the shame and embarrassment when they see their
-                            friends.</p>
+                    <div class="w-100 d-block d-xl-none"></div>
+                    <div class="col-12 col-md-6 col-lg-5 col-xl-4 help-to">
+                        <div class="help-to-box mt-4 mt-xl-0">
+                            <i class="fas fa-tshirt"></i>
+                            <p>Clothe Our Children so they don’t’ feel the shame and embarrassment when they see their
+                                friends.</p>
+                        </div>
                     </div>
                 </div>
-                <div class="row d-flex justify-content-center mt-5">
-                    <div class="col-4 help-to">
-                        <i class="fas fa-ring"></i>
-                        <p>Marry Our Children so they can establish Orthodox Jewish homes of their own.</p>
+                <div class="row d-flex justify-content-center mt-md-4">
+                    <div class="col-12 col-md-6 col-lg-5 help-to">
+                        <div class="help-to-box mt-4 mt-md-0">
+                            <i class="fas fa-ring"></i>
+                            <p>Marry Our Children so they can establish Orthodox Jewish homes of their own.</p>
+                        </div>
                     </div>
-                    <div class="col-4 help-to">
-                        <i class="fas fa-hands-helping"></i>
-                        <p>Grow Our Children so they can increase the preservation of our Torah and Mesorah.</p>
+                    <div class="col-12 col-md-6 col-lg-5 help-to">
+                        <div class="help-to-box mt-4 mt-md-0">
+                            <i class="fas fa-hands-helping"></i>
+                            <p>Grow Our Children so they can increase the preservation of our Torah and Mesorah.</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -151,17 +139,18 @@
     <section id="contactUs" class="contact-us-section">
         <div class="container">
             <div class="row">
-                <div class="col-6">
-                    <a class="footer-donate-action" href=""><img class="footer-logo" src="https://levon-avetisyan.github.io/atc/img/footer_logo.png"
-                                                                 alt=""></a>
+                <div class="col-12 col-md-6">
+                    <a class="footer-donate-action" href="">
+                        <img class="footer-logo" src="https://levon-avetisyan.github.io/atc/img/footer_logo.png"
+                             alt=""></a>
                     <p class="footer-desc">Keren Achiezer urges you to partake in saving families from sinking. Show
                         compassion for
                         neighbors and friends, open your heart to the pain of others, and join our commitment to
                         help
                         the orphans in our community. </p>
                 </div>
-                <div class="col-6">
-                    <div class="contact-form">
+                <div class="col-12 col-md-6">
+                    <div class="contact-form mt-4 mt-md-0">
                         <h3>CONTACT US</h3>
                         <form action="">
                             <div class="form-group"><label for="">Name:</label>
@@ -174,7 +163,7 @@
                                 <input type="text" class="form-control">
                             </div>
                             <div class="form-group">
-                                <a href="" class="btn-primary btn btn-form-submit" type="submit">SUBMIT</a>
+                                <a href="" class="btn-primary btn btn-form-submit">SUBMIT</a>
                             </div>
                         </form>
                     </div>
