--- a/rabbinic-endorsement.html
+++ b/rabbinic-endorsement.html
@@ -5,8 +5,8 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <title>ATCFUND.ORG</title>
-    <link rel="shortcut icon" href="https://levon-avetisyan.github.io/atc/favicon.png" type="image/x-icon">
-    <link rel="icon" href="https://levon-avetisyan.github.io/atc/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./favicon.png" type="image/x-icon">
+    <link rel="icon" href="./favicon.png" type="image/x-icon">
     <script src="./js/vendor/jquery.min.js"></script>
     <script src="./js/vendor/bootstrap.min.js"></script>
     <script src="./js/scripts.js"></script>
@@ -20,20 +20,12 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-<div class="page-header">
-    <div class="container h-100">
-        <div class="h-100 d-flex flex-row align-items-center justify-content-between">
-            <a class="header-logo" href="https://levon-avetisyan.github.io/atc"><img src="./img/logo.png" alt="ACT FUND LOGO"></a>
-            <div class="header-call-us">
-                <a href="tel:732-616-8499">
-                    <i class="fas fa-phone"></i>
-                    <span>Call us: 732-616-8499</span>
-                </a>
-            </div>
-        </div>
+<div class="page-header pl-3">
+    <div class="h-100 d-flex flex-row align-items-center justify-content-between">
+        <a class="header-logo" href="https://levon-avetisyan.github.io/atc"><img src="./img/logo-karen.png" alt="ACT FUND LOGO"></a>
     </div>
 </div>
-<nav class="navbar navbar-expand-lg">
+<nav class="navbar navbar-expand-lg justify-content-end">
     <div class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav"
          aria-controls="navbarNav"
          aria-expanded="false"
@@ -43,14 +35,18 @@
         </div>
     </div>
     <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav w-100 d-flex flex-row align-items-center justify-content-center">
-            <li class="nav-item"><a class="nav-link" href="https://levon-avetisyan.github.io/atc/#hero">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="https://levon-avetisyan.github.io/atc/#aboutUs">About Us</a></li>
-            <li class="nav-item"><a class="nav-link" href="https://levon-avetisyan.github.io/atc/#help">Help</a></li>
-            <li class="nav-item"><a class="nav-link" href="https://levon-avetisyan.github.io/atc/#contactUs">Contact us</a></li>
-            <li class="nav-item"><a class="nav-link nav-link-separate" href="https://levon-avetisyan.github.io/atc/rabbinic-endorsement">Rabbinic Endorsement</a></li>
-            <li class="nav-item ml-1"><a class="nav-link nav-link-separate" href="/legal-documents">Legal Documents</a></li>
-        </ul>
+        <div class="container">
+            <ul class="pb-4 pb-lg-0 navbar-nav w-100 d-flex flex-column flex-lg-row align-items-center justify-content-around">
+                <li class="nav-item"><a class="nav-link" href="https://levon-avetisyan.github.io/atc/#hero">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://levon-avetisyan.github.io/atc/#aboutUs">About Us</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://levon-avetisyan.github.io/atc/#help">Help</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://levon-avetisyan.github.io/atc/#contactUs">Contact us</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://levon-avetisyan.github.io/atc/rabbinic-endorsement">Rabbinic
+                    Endorsement</a></li>
+                <li class="nav-item ml-1"><a class="nav-link" href="https://levon-avetisyan.github.io/atc/legal-documents">Legal
+                    Documents</a></li>
+            </ul>
+        </div>
     </div>
 </nav>
 <section class="main rabbinic-endorsement-container">
