--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
-    <title>ATCFUND.ORG</title>
+    <title>Keren Achiezer</title>
     <link rel="shortcut icon" href="./favicon.png" type="image/x-icon">
     <link rel="icon" href="./favicon.png" type="image/x-icon">
     <script src="./js/vendor/jquery.min.js"></script>
@@ -43,8 +43,11 @@
                 <li class="nav-item"><a class="nav-link" href="https://levon-avetisyan.github.io/atc/#contactUs">Contact us</a></li>
                 <li class="nav-item"><a class="nav-link" href="https://levon-avetisyan.github.io/atc/rabbinic-endorsement">Rabbinic
                         Endorsement</a></li>
-                <li class="nav-item ml-1"><a class="nav-link" href="https://levon-avetisyan.github.io/atc/legal-documents">Legal
-                        Documents</a></li>
+                <li class="nav-item ml-1"><a class="nav-link" href="https://manelaco.com/donate/legal-documents/">Legal
+                    Documents</a></li>
+                <li class="nav-item ml-1">
+                    <a class="nav-link donate-nav-link" href="/donate">DONATE</a>
+                </li>
             </ul>
         </div>
     </div>
